feat: 重构登录注册和首页

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,33 +1,1 @@
-<div class="login-container">
-  <form class="login-form" nz-form [formGroup]="loginForm" (ngSubmit)="submitForm()" nzLayout="horizontal">
-    <h2>Blog</h2>
-    <nz-form-item>
-      <nz-form-control nzErrorTip="Please input your username!">
-        <nz-input-group nzPrefixIcon="user">
-          <input type="text" nz-input formControlName="user_name" placeholder="请输入用户名" />
-        </nz-input-group>
-      </nz-form-control>
-    </nz-form-item>
-    <nz-form-item>
-      <nz-form-control nzErrorTip="Please input your Password!">
-        <nz-input-group nzPrefixIcon="lock">
-          <input type="password" nz-input formControlName="password" placeholder="密码" />
-        </nz-input-group>
-      </nz-form-control>
-    </nz-form-item>
-    <div nz-row class="login-form-margin">
-      <div nz-col [nzSpan]="12">
-        <label nz-checkbox formControlName="remember">
-          <span>记住我</span>
-        </label>
-      </div>
-      <div nz-col [nzSpan]="12">
-        <a class="login-form-forgot">忘记密码?</a>
-      </div>
-    </div>
-    <button nz-button class="login-form-button login-form-margin" [nzType]="'primary'"
-      [disabled]="!loginForm.valid">登录</button>
-    Or
-    <a>注册</a>
-  </form>
-</div>
+<router-outlet></router-outlet>
