--- a/src/app/modules/index/index.component.html
+++ b/src/app/modules/index/index.component.html
@@ -3,43 +3,19 @@
       <i nz-icon nzType="mail"></i>
       首页
     </li>
-    <li nz-menu-item nzDisabled>
+    <li nz-menu-item>
       <i nz-icon nzType="appstore"></i>
-      Navigation Two
-    </li>
-    <li nz-submenu nzTitle="Navigation Three - Submenu" nzIcon="setting">
-      <ul>
-        <li nz-menu-group nzTitle="Item 1">
-          <ul>
-            <li nz-menu-item>Option 1</li>
-            <li nz-menu-item>Option 2</li>
-          </ul>
-        </li>
-        <li nz-menu-group nzTitle="Item 2">
-          <ul>
-            <li nz-menu-item>Option 3</li>
-            <li nz-menu-item>Option 4</li>
-            <li nz-submenu nzTitle="Sub Menu">
-              <ul>
-                <li nz-menu-item nzDisabled>Option 5</li>
-                <li nz-menu-item>Option 6</li>
-              </ul>
-            </li>
-            <li nz-submenu nzDisabled nzTitle="Disabled Sub Menu">
-              <ul>
-                <li nz-menu-item>Option 5</li>
-                <li nz-menu-item>Option 6</li>
-              </ul>
-            </li>
-          </ul>
-        </li>
-      </ul>
+      文章管理
     </li>
     <li nz-menu-item>
-      <a href="https://ng.ant.design" target="_blank" rel="noopener noreferrer">Navigation Four - Link</a>
+      <i nz-icon nzType="appstore"></i>
+      用户管理
     </li>
   </ul>
-  <div class="funcion-area" *ngIf="userService.isLogin">
-    <button nz-button nzType="primary" (click)="login()">登录</button>
-    <button nz-button nzType="default" (click)="register()">注册</button>
+  <div class="funcion-area">
+    <ng-container *ngIf="userService.isNotLogin">
+      <button nz-button nzType="primary" (click)="login()">登录</button>
+      <button nz-button nzType="default" (click)="register()">注册</button>
+    </ng-container>
+    <button nz-button nzType="primary" nzShape="round" (click)="write()">写文章</button>
   </div>
