--- a/src/app/modules/index/index.component.scss
+++ b/src/app/modules/index/index.component.scss
@@ -1,10 +1,11 @@
 :host {
+  max-width: 1200px;
   display: flex;
   align-items: center;
   justify-content: space-between;
-  margin: 10px
+  margin: 10px auto;
 }
 
-.funcion-area button{
+.funcion-area button {
   margin-right: 15px;
 }
