--- a/src/app/modules/writer/writer.component.html
+++ b/src/app/modules/writer/writer.component.html
@@ -1,1 +1,4 @@
-<p>writer works!</p>
+<div class="writer-wrapper">
+  <editor [init]="editorConfig" [(ngModel)]="editorContent"></editor>
+  <button nz-button nzType="primary" (click)="contentInfo()">发布文章</button>
+</div>
