--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,4 +1,5 @@
 <div class="login-container">
+  <img src="assets/images/bg.jpeg" alt="">
   <form class="login-form" nz-form [formGroup]="loginForm" (ngSubmit)="submitForm()" nzLayout="horizontal">
     <h2 align="center">登录</h2>
     <nz-form-item>
