--- a/src/app/components/login/login.component.scss
+++ b/src/app/components/login/login.component.scss
@@ -2,9 +2,14 @@
   position: relative;
   width: 100%;
   height: 100%;
-  background: url('/assets/images/bg.jpeg') no-repeat;
-  background-size: cover;
 
+  img {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    z-index: -1;
+    object-fit: cover;
+  }
 
   .login-form {
     position: absolute;
