--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -5,7 +5,7 @@
     <nz-form-item>
       <nz-form-control nzErrorTip="Please input your username!">
         <nz-input-group nzPrefixIcon="user">
-          <input type="text" nz-input formControlName="user_name" placeholder="请输入用户名" />
+          <input type="text" nz-input formControlName="username" placeholder="请输入用户名" />
         </nz-input-group>
       </nz-form-control>
     </nz-form-item>
