--- a/src/app/components/register/register.component.html
+++ b/src/app/components/register/register.component.html
@@ -4,7 +4,7 @@
     <nz-form-item>
       <nz-form-control nzErrorTip="请输入用户名">
         <nz-input-group nzPrefixIcon="user">
-          <input type="text" nz-input formControlName="user_name" placeholder="请输入用户名" />
+          <input type="text" nz-input formControlName="username" placeholder="请输入用户名" />
         </nz-input-group>
       </nz-form-control>
     </nz-form-item>
