--- a/src/app/modules/index/index.component.html
+++ b/src/app/modules/index/index.component.html
@@ -15,10 +15,14 @@
       </li>
     </ul>
     <div class="funcion-area">
-      <ng-container *ngIf="userService.isNotLogin">
+      <ng-container *ngIf="tokenService.check();else LogoutTpl">
+        <nz-avatar nzIcon="user" class="m-r-16"></nz-avatar>
+        <button nz-button nzType="default" (click)="logout()">登出</button>
+      </ng-container>
+      <ng-template #LogoutTpl>
         <button nz-button nzType="primary" (click)="login()">登录</button>
         <button nz-button nzType="default" (click)="register()">注册</button>
-      </ng-container>
+      </ng-template>
       <button nz-button nzType="primary" nzShape="round" (click)="write()">写文章</button>
     </div>
   </div>
