--- a/src/app/components/article-list/article-list.component.html
+++ b/src/app/components/article-list/article-list.component.html
@@ -1,6 +1,7 @@
 <ul class="article-wrapper">
   <li *ngFor="let item of articleList">
-    <a class="title" [routerLink]="[ '/path', item.article_id ]">{{item.title}}</a>
+    <!-- <a class="title" [routerLink]="[ '/article/detail', item.article_id ]">{{item.title}}</a> -->
+    <a class="title" >{{item.title}}</a>
     <p class="abstract">{{item.summary}}</p>
     <div class="meta">
       <a class="nikename">{{item.nikename}}</a>
