--- a/src/styles/helpers/_variables.scss
+++ b/src/styles/helpers/_variables.scss
@@ -13,6 +13,7 @@ $spacers: (
   8: $spacer * 0.5,
   12: $spacer * 0.75,
   16: $spacer,
+  20: $spacer * 1.25,
   24: $spacer * 1.5,
   32: $spacer * 2,
   48: $spacer * 3,
