--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,8 +1,8 @@
 <div class="ba-wrapper">
   <div class="nav">
     <ul nz-menu nzMode="horizontal">
-      <li nz-menu-item nzSelected>
-        首页
+      <li nz-menu-item [nzSelected]>
+        <a [routerLink]="[ '/' ]">首页</a>
       </li>
       <li nz-menu-item>
         <i nz-icon nzType="appstore"></i>
