--- a/src/app/modules/article/article.component.html
+++ b/src/app/modules/article/article.component.html
@@ -1,7 +1,7 @@
 <ul class="article-wrapper p-x-20">
     <li *ngFor="let item of articleList">
       <a class="title" [routerLink]="[ 'detail', item.article_id ]">{{item.title}}</a>
-      <p class="e2e-inner-html-bound" [innerHTML]="item.content | htmlFilter"></p>
+      <p class="e2e-inner-html-bound" [innerHTML]="item.summary | htmlFilter"></p>
       <div class="meta">
         <a class="nikename">{{item.nikename}}</a>
         <a>
