--- a/src/app/modules/article/detail/detail.component.html
+++ b/src/app/modules/article/detail/detail.component.html
@@ -1,1 +1,7 @@
-<p>detail works!</p>
+<div class="detaile-wrapper p-x-20">
+  <ng-container *ngIf="article">
+    <h1>{{article.title}}</h1>
+    <div [innerHTML]="article.content | htmlFilter"></div>
+  </ng-container>
+
+</div>
