--- a/src/app/modules/article/article.component.html
+++ b/src/app/modules/article/article.component.html
@@ -1,6 +1,8 @@
 <ul class="article-wrapper p-x-20">
   <li *ngFor="let item of articleList">
-    <a class="title" [routerLink]="[ 'detail', item.article_id ]">{{item.title}}</a>
+    <h1 nz-typography>
+      <a [routerLink]="[ 'detail', item.article_id ]">{{item.title}}</a>
+    </h1>
     <p class="e2e-inner-html-bound" [innerHTML]="item.summary | htmlFilter"></p>
     <div class="meta">
       <a class="nikename">{{item.nikename}}</a>
