--- a/src/app/modules/article/article.component.scss
+++ b/src/app/modules/article/article.component.scss
@@ -1,6 +1,8 @@
-.article-wrapper {
+.article-wrapper,
+.admin-wrapper {
   max-width: 1200px;
-  margin:0 auto;
+  margin: 0 auto;
+
   li {
     position: relative;
     width: 100%;
