--- a/src/app/modules/article/admin/admin.component.html
+++ b/src/app/modules/article/admin/admin.component.html
@@ -4,8 +4,10 @@
       <a [routerLink]="[ '/article/detail', item.article_id ]">{{item.title}}</a>
       <div class="btns">
         <button nz-button nzType="default">
-          <i nz-icon nzType="search"></i>
-          编辑
+          <a [routerLink]="[ '/writer', item.article_id ]">
+            <i nz-icon nzType="search"></i>
+            编辑
+          </a>
         </button>
         <button nz-button nzDanger class="m-l-16" (click)="showConfirm(item.article_id!)">
           <i nz-icon nzType="search"></i>
