--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -11,7 +11,7 @@
       </li>
       <li nz-menu-item>
         <i nz-icon nzType="appstore"></i>
-        用户管理
+        <a [routerLink]="[ '/user' ]">用户管理</a>
       </li>
     </ul>
     <div class="funcion-area">
