--- a/src/app/modules/article/article.component.html
+++ b/src/app/modules/article/article.component.html
@@ -1,4 +1,4 @@
-<ul class="article-wrapper p-x-20">
+<ul class="content-wrapper p-x-20">
   <li *ngFor="let item of articleList">
     <h1 nz-typography>
       <a [routerLink]="[ 'detail', item.article_id ]">{{item.title}}</a>
